<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">WeightMate</string>
    <string name="action_settings">Settings</string>
    <!-- Homescreen Strings -->
    <string name="calendar_button">Calendar</string>
    <string name="food_button">Food</string>
    <string name="calculator_button">Calculator</string>
    <string name="extras_button">Extra</string>
    <!-- Calendar Strings -->
    <string name="title_activity_calendar">Calendar</string>
        <string name="title_activity_daily_planner">Daily Planner</string>
    <!-- Calculator Strings -->
    <string name="title_activity_calculator">Calculator</string>
    <string name="age_text">Age</string>
    <string name="weight_text">Weight</string>
    <string name="male_button">Male</string>
    <string name="female_button">Female</string>
    <string name="height_text">Height</string>
    <string name="height_feet_text">Feet</string>
    <string name="height_inches_text">Inches</string>
    <string name="activity_text">Activity</string>
    <string name="calculate_button">Calculate</string>
    <!-- Food List Strings -->
    <string name="title_activity_food_list">FoodList</string>
    <string name="recent_foods">Recent Food</string>
    <string name="search_foodList">Search Food</string>
    <string name="search_food_button">Go</string>
    <string name="add_food">Add food</string>
    <string name="add_food_button">Add</string>
    <string name="title_activity_calculator_results">CalculatorResultsActivity</string>
    <string name="title_activity_extras">Extras</string>
    <string name="hello_world">Hello world!</string>

    <string-array android:id="@+id/activity_factor" name="activity_factor">
        <item>sedentary (little to no exercise)</item>
        <item>lightly active (exercise/sports 1&#8211;3 times/week)</item>
        <item>moderately active (exercise/sports 3&#8211;5 times/week)</item>
        <item>very active (hard exercise/sports 6&#8211;7 times/week)</item>
        <item>extra active (very hard exercise/sports or physical job)</item>
    </string-array>
    <!-- BMI Calculator Strings -->
    <string name="bmicalculator_button">Bavi Calculator</string>
    <string name="title_activity_bmi_calculator">Body Mass Index Calculator</string>
    <string name="bmi_height_ft_text">Height (Imperial)</string>
    <string name="bmi_weight_lb_text">Weight (Imperial)</string>
    <string name="bmi_imperial_calculate_button">Calculate (Imperial)</string>
    <string name="bmi_height_metric_text">Height (Metric)</string>
    <string name="bmi_weight_metric_text">Weight (Metric)</string>
    <string name="bmi_metric_calculate_button">Calculate (Metric)</string>
    <!-- BMI Calculator Results String -->
    <string name="title_activity_bmi_calculator_results">Body Mass Index</string>
    <string name="bmi_dialogue">Your BMI Is:</string>
    <string name="title_activity_bmi_imperial_calculator">BmiImperialCalculatorActivity</string>

</resources>
