<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weightmate.CalculatorActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/age_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/age_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/age_text"
        android:layout_toRightOf="@+id/weight_text"
        android:ems="3"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/weight_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/age_edit"
        android:layout_alignTop="@+id/weight_text"
        android:layout_toRightOf="@+id/weight_text"
        android:ems="2"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/age_edit"
        android:layout_marginRight="19dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female_button" />
    </RadioGroup>

    <TextView
        android:id="@+id/height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weight_text"
        android:layout_below="@+id/weight_edit"
        android:layout_marginTop="22dp"
        android:text="@string/height_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/height_feet_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/height_text"
        android:layout_alignRight="@+id/weight_edit"
        android:layout_toRightOf="@+id/height_text"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/height_text"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/height_inches_text"
        android:onClick="calculateBMR"
        android:text="@string/calculate_button" />

    <TextView
        android:id="@+id/height_feet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/height_feet_edit"
        android:layout_toRightOf="@+id/height_feet_edit"
        android:text="@string/height_feet_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioButton
        android:id="@+id/male_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/age_edit"
        android:text="@string/male_button" />

    <TextView
        android:id="@+id/weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/male_button"
        android:text="@string/weight_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/height_inches_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/height_feet_text"
        android:layout_alignLeft="@+id/male_button"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/height_inches_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/height_feet_text"
        android:layout_alignBottom="@+id/height_feet_text"
        android:layout_toRightOf="@+id/height_inches_edit"
        android:text="@string/height_inches_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        
        android:id="@+id/exercise_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:prompt="@string/spinner_prompt"
        android:entries="@array/activities_spinner"
         />

</RelativeLayout>